# typst-packages-old

./: .gitignore  Cargo.toml  Justfile  README.md
crudo/: README.md  typst.toml
crudo/docs/: manual.typ
crudo/gallery/: test.typ
crudo/src/: lib.typ
pre-plantuml/: Justfile  README.md  typst.toml
pre-plantuml/docs/: manual.typ
pre-plantuml/gallery/: test.typ
pre-plantuml/plugin/: Cargo.toml
pre-plantuml/plugin/src/: lib.rs
pre-plantuml/src/: lib.typ  plantuml_url.wasm
prequery/: README.md  typst.toml
prequery/docs/: manual.typ
prequery/gallery/: test.typ
prequery/src/: lib.typ
scripts/: package  test
template/: README.md  manual.typ  typst.toml
template/docs/: manual.typ  template.typ
template/gallery/: test.typ
template/src/: lib.typ
tidy-types/: README.md  typst.toml
tidy-types/docs/: manual.typ
tidy-types/gallery/: test.typ
tidy-types/src/: lib.typ
